<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="out.activity.OpeningActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TableLayout
            android:background="@color/translucent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/monday">
                </TextView>
                <TextView
                    android:id="@+id/monday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/tuesday">
                </TextView>
                <TextView
                    android:id="@+id/tuesday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/wednesday">
                </TextView>
                <TextView
                    android:id="@+id/wednesday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/thursday">
                </TextView>
                <TextView
                    android:id="@+id/thursday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/friday">
                </TextView>
                <TextView
                    android:id="@+id/friday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/saturday">
                </TextView>
                <TextView
                    android:id="@+id/saturday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
            <TableRow android:background="@color/translucent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp">

                <TextView android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/sunday">
                </TextView>
                <TextView
                    android:id="@+id/sunday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
                </TextView>
            </TableRow>
        </TableLayout>



    </LinearLayout>
</LinearLayout>
